--- a/index.html
+++ b/index.html
@@ -59,20 +59,28 @@
       <div id="modulos">
         <ul>
           <li>
-            <h3>Módulo 1</h3>
-            <p>Fundamentos do desenvolvimento Web</p>
+            <a href="#tecnologias">
+              <h3>Módulo 1</h3>
+              <p>Fundamentos do desenvolvimento Web</p>
+            </a>
           </li>
           <li>
-            <h3>Módulo 2</h3>
-            <p>Desenvolvimento Front-End</p>
+            <a href="#tecnologias">
+              <h3>Módulo 2</h3>
+              <p>Desenvolvimento Front-End</p>
+            </a>
           </li>
           <li>
-            <h3>Módulo 3</h3>
-            <p>Desenvolvimento Back-End</p>
+            <a href="#tecnologias">
+              <h3>Módulo 3</h3>
+              <p>Desenvolvimento Back-End</p>
+            </a>
           </li>
           <li>
-            <h3>Módulo 4</h3>
-            <p>Testes automatizados</p>
+            <a href="#tecnologias">
+              <h3>Módulo 4</h3>
+              <p>Testes automatizados</p>
+            </a>
           </li>
         </ul>
       </div>
@@ -158,18 +166,60 @@
       </div>
 
       <div id="equipe">
-        <h2>Desenvolvedor desse Projeto</h2>
-        <img id="photo-user" src="imgs/photo-user.jpg" alt="Foto de perfil" />
-        <p>Rafael César</p>
-        <div id="redes-sociais">
-          <a href="https://www.linkedin.com/in/rafaelcesar0/" target="_blank">
-            <img src="https://skillicons.dev/icons?i=linkedin" />
-          </a>
-          <a href="https://github.com/rafaelcesar0" target="_blank">
-            <img src="https://skillicons.dev/icons?i=github" />
-          </a>
+        <div>
+          <h3>Desenvolvedor desse Projeto</h3>
+          <img id="photo-user" src="imgs/photo-user.jpg" alt="Foto de perfil" />
+        </div>
+        
+        <div id="dados-user">
+          <p>Rafael César</p>
+          <div id="redes-sociais">
+            <a href="https://www.linkedin.com/in/rafaelcesar0/" target="_blank">
+              <img src="https://skillicons.dev/icons?i=linkedin" />
+            </a>
+            <a href="https://github.com/rafaelcesar0" target="_blank">
+              <img src="https://skillicons.dev/icons?i=github" />
+            </a>
+          </div>
         </div>
       </div>
     </main>
+    <footer>
+      <div id="rodape">
+        <form id="cadastro">
+          <p>Faça sua inscrição para receber novidades</p>
+          <div>
+            <div>
+              <label for="nome">Nome</label>
+              <input type="text" id="nome">
+            </div>
+            <div >
+              <label for="email">Email</label>
+              <input type="email" id="email">
+            </div>
+          </div>
+          <button type="submit">Cadastrar-se</button>
+        </form>
+        
+        <div id="contato">
+            <div>
+              <img src="imgs/google-maps.png" alt="Google Maps">
+              <address>Rua dos Bobos, Nº 0</address>
+            </div>
+            <div>
+              <img src="imgs/gmail.png" alt="Email">
+              <p>rafael123@gmail.com</p>
+            </div>
+            <div>
+              <img src="imgs/whatsapp.png" alt="Email">
+              <p>(85) 98888-7777</p>
+            </div>
+        </div>
+      </div>
+      <div id="aviso">
+        <h1>AVISO:</h1>
+        <p>Essa é uma página <strong>FAKE</strong>. Criada para estudos de desenvolvimento Web </p>
+      </div>
+    </footer>
   </body>
 </html>
