--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
 
       <div id="tecnologias">
-        <div>
+        <div id="div-front-end">
           <h1>Front-End</h1>
           <ul id="front-end">
             <li>
@@ -124,9 +124,14 @@
           </ul>
         </div>
 
-        <hr />
+        <div class="vertical-line-container">
+          <div class="vertical-line"></div>
+          <div class="icon-container">
+            <i class="fa-solid fa-code"></i>
+          </div>
+        </div>
 
-        <div>
+        <div id="div-back-end">
           <h1>Back-End</h1>
           <ul id="back-end">
             <li>
@@ -170,7 +175,7 @@
           <h3>Desenvolvedor desse Projeto</h3>
           <img id="photo-user" src="imgs/photo-user.jpg" alt="Foto de perfil" />
         </div>
-        
+
         <div id="dados-user">
           <p>Rafael César</p>
           <div id="redes-sociais">
@@ -191,34 +196,37 @@
           <div>
             <div>
               <label for="nome">Nome</label>
-              <input type="text" id="nome">
+              <input type="text" id="nome" />
             </div>
-            <div >
+            <div>
               <label for="email">Email</label>
-              <input type="email" id="email">
+              <input type="email" id="email" />
             </div>
           </div>
           <button type="submit">Cadastrar-se</button>
         </form>
-        
+
         <div id="contato">
-            <div>
-              <img src="imgs/google-maps.png" alt="Google Maps">
-              <address>Rua dos Bobos, Nº 0</address>
-            </div>
-            <div>
-              <img src="imgs/gmail.png" alt="Email">
-              <p>rafael123@gmail.com</p>
-            </div>
-            <div>
-              <img src="imgs/whatsapp.png" alt="Email">
-              <p>(85) 98888-7777</p>
-            </div>
+          <div>
+            <img src="imgs/google-maps.png" alt="Google Maps" />
+            <address>Rua dos Bobos, Nº 0</address>
+          </div>
+          <div>
+            <img src="imgs/gmail.png" alt="Email" />
+            <p>rafael123@gmail.com</p>
+          </div>
+          <div>
+            <img src="imgs/whatsapp.png" alt="Email" />
+            <p>(85) 98888-7777</p>
+          </div>
         </div>
       </div>
       <div id="aviso">
         <h1>AVISO:</h1>
-        <p>Essa é uma página <strong>FAKE</strong>. Criada para estudos de desenvolvimento Web </p>
+        <p>
+          Essa é uma página <strong>FAKE</strong>. Criada para estudos de
+          desenvolvimento Web
+        </p>
       </div>
     </footer>
   </body>
