alterações no footer

--- a/index.html
+++ b/index.html
@@ -190,43 +190,48 @@
       </div>
     </main>
     <footer>
-      <div id="rodape">
-        <form id="cadastro">
-          <p>Faça sua inscrição para receber novidades</p>
-          <div>
+      <div id="footer-main">
+        <div id="rodape">
+          <form id="cadastro">
+            <p>Faça sua <strong>inscrição</strong> para receber novidades.</p>
             <div>
-              <label for="nome">Nome</label>
-              <input type="text" id="nome" />
+              <div>
+                <label for="nome">Nome</label>
+                <input type="text" id="nome" />
+              </div>
+              <div>
+                <label for="email">Email</label>
+                <input type="email" id="email" />
+              </div>
             </div>
-            <div>
-              <label for="email">Email</label>
-              <input type="email" id="email" />
-            </div>
-          </div>
-          <button type="submit">Cadastrar-se</button>
-        </form>
-
-        <div id="contato">
-          <div>
-            <img src="imgs/google-maps.png" alt="Google Maps" />
-            <address>Rua dos Bobos, Nº 0</address>
-          </div>
-          <div>
-            <img src="imgs/gmail.png" alt="Email" />
-            <p>rafael123@gmail.com</p>
-          </div>
-          <div>
-            <img src="imgs/whatsapp.png" alt="Email" />
-            <p>(85) 98888-7777</p>
-          </div>
+            <button type="submit">Cadastrar-se</button>
+          </form>
+          <p id="form-lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsam totam id nihil amet minima quidem voluptatum dolores? Aspernatur repellendus officiis eos veritatis harum vitae repellat magnam beatae deleniti quod.</p>
+          <ul id="contato">
+            <li>
+              <img src="imgs/google-maps.png" alt="Google Maps" />
+              <address>Rua dos Bobos, Nº 0</address>
+            </li>
+            <hr>
+            <li>
+              <img src="imgs/gmail.png" alt="Email" />
+              <p>rafael123@gmail.com</p>
+            </li>
+            <hr>
+            <li>
+              <img src="imgs/whatsapp.png" alt="Email" />
+              <p>(85) 98888-7777</p>
+            </li>
+            <hr>
+          </ul>
         </div>
-      </div>
-      <div id="aviso">
-        <h1>AVISO:</h1>
-        <p>
-          Essa é uma página <strong>FAKE</strong>. Criada para estudos de
-          desenvolvimento Web
-        </p>
+        <div id="aviso">
+          <h1>AVISO!</h1>
+          <p>
+            Essa é uma página <strong>FAKE</strong>. Criada para estudos de
+            desenvolvimento Web
+          </p>
+        </div>
       </div>
     </footer>
   </body>
